...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_fragment_toolbar"
                app:layout_constraintWidth_percent="0.28" />

            <!-- Profile name -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/profile_fragment_profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:fontFamily="@font/poppins"
                android:textAllCaps="false"
                android:textColor="@color/primaryTextColor"
...
            <!-- Email -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/profile_fragment_email_label"
                style="@style/Theme.MollerT.CommonLabelText"
                android:layout_marginTop="@dimen/dimen_10"
                android:text="@string/email_label"
                app:layout_constraintStart_toStartOf="@id/profile_fragment_email"
                app:layout_constraintTop_toBottomOf="@id/profile_fragment_profile_name" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profile_fragment_email"
                style="@style/Theme.MollerT.CommonEditText"
                android:layout_marginTop="@dimen/dimen_10"
...
