...
        android:label="CalendarFragment" >
        <action
            android:id="@+id/action_calendarFragment_to_cardDetailFragment"
            app:destination="@id/cardDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.tnh.mollert.profile.ProfileFragment"
        android:label="ProfileFragment" >
        <action
            android:id="@+id/action_profileFragment_to_editProfileFragment"
            app:destination="@id/editProfileFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right" />
        <action
            android:id="@+id/action_profileFragment_to_splashFragment"
...
